Fix #11 - Line height too tight on mobile version of phase banners, causing lack of space below them when text wraps

--- a/src/elements/govuk/phase-banner/style.scss
+++ b/src/elements/govuk/phase-banner/style.scss
@@ -8,3 +8,12 @@
 .phase-tag-beta {
   @include phase-tag($state: beta);
 }
+
+.phase-banner-alpha,
+.phase-banner-beta {
+  p {
+    @include media(mobile) {
+      line-height: 1.5;
+    }
+  }
+}
